k8s/incubator/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: piracy
  labels:
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/version: v1.0.0.2255
    helm.sh/chart: lidarr-14.2.2
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: lidarr
      app.kubernetes.io/name: lidarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: lidarr
        app.kubernetes.io/name: lidarr
    spec:
      automountServiceAccountToken: true
      containers:
        - name: lidarr
          image: linuxserver/lidarr:3.1.1-nightly
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8686
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /usr/bin/env
                - bash
                - -c
                - curl --fail localhost:8686/api/v1/system/status?apiKey=`IFS=\> && while read -d \< E C; do if [[ $E = "ApiKey" ]]; then echo $C; fi; done < /config/config.xml`
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8686
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          startupProbe:
            tcpSocket:
              port: 8686
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 1
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /music
            - name: downloads
              mountPath: /home/andrewthetechie/downloads
      serviceAccountName: default
      enableServiceLinks: true
      dnsPolicy: ClusterFirst
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: media
          nfs:
            server: duarte.herrington.services
            path: /mnt/Media/Music
        - name: downloads
          nfs:
            server: duarte.herrington.services
            path: /mnt/Media/downloaded
